# API-softdesk

./: .gitignore  README.md  pyproject.toml  requirements.txt
softdesk/: db.sqlite3
softdesk/projects/: admin.py  manager.py  models.py  permissions.py  serializers.py  views.py
softdesk/projects/migrations/: 0001_initial.py  0002_customproject_contributors_and_more.py  0003_alter_contributor_options_and_more.py  0004_issue.py  0005_issue_name.py  0006_alter_issue_name_alter_issue_user.py  0007_issue_created_by.py  0008_alter_issue_user.py  0009_rename_created_by_issue_author_comment.py  0010_comment_created_time_comment_modified_time_and_more.py  0011_alter_comment_created_time_and_more.py  0012_alter_comment_options_remove_comment_link_and_more.py  0013_alter_comment_author_alter_customproject_type_and_more.py
softdesk/softdesk/: settings.py  urls.py
softdesk/users/: admin.py  jwt.py  manager.py  models.py  serializers.py  views.py
softdesk/users/migrations/: 0001_initial.py  0002_remove_user_age_user_date_of_birth.py  0003_customuser_delete_user.py  0004_alter_customuser_password.py  0005_customuser_is_active_customuser_is_staff_and_more.py  0006_rename_is_super_user_customuser_is_superuser.py  0007_customuser_groups_customuser_user_permissions.py  0008_alter_customuser_can_be_contacted_and_more.py  0009_alter_customuser_can_be_contacted_and_more.py  0010_alter_customuser_can_be_contacted_and_more.py  0011_alter_customuser_can_be_contacted_and_more.py  0012_alter_customuser_is_active_alter_customuser_is_staff_and_more.py  (+2 more)
